Fixed the profile picture, no more cropping issues.

--- a/jcmnowebpage/src/components/Bio/Bio.css
+++ b/jcmnowebpage/src/components/Bio/Bio.css
@@ -1,21 +1,20 @@
 .bio{
     width: 100vw;
+    margin-top: 120px;
     display: flex;
     align-items: center;
-    padding:relative;
+    padding: 60px;
     justify-content: center;
-    margin-top: 80px;
     position: relative;
     background: #89ce00ad; 
-    padding: 20px;
-    top: 15px;
+
 }
 
 .bio .bio-image{
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
     object-fit: cover;
-    border-radius: 100%;
+    border-radius: 80%;
     margin-left:50px;
     
 }
